[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eap"
version = "0.1.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "torch",
    "jaxtyping",
    "tqdm",
    "transformer_lens"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]  # Adjust this if your package is not in a src directory
